--- a/finspot-web/public/index.html
+++ b/finspot-web/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FinSpot</title>
   </head>
+  <style>
+    #root {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
   <body>
     <div id="root"></div>
   </body>
